# QMath3d

./: .gitignore  CMakeLists.txt  LICENSE  QBox3D  QMath3d.pro  QMath3d.qbs  QPlane3D  QRay3D  QSphere3D  QTriangle3D  README.md  qbox3d.cpp  qbox3d.h  qplane3d.h  qray3d.h  qsphere3d.cpp  qsphere3d.h  qtriangle3d.cpp  qtriangle3d.h  smallqt3d_global.h
tests/: CMakeLists.txt  Math3d_tests.cpp
